@@ -204,6 +204,9 @@ Bug Fixes
 * SOLR-4734: Leader election fails with an NPE if there is no UpdateLog.
  (Mark Miller, Alexander Eibner)
 
+* SOLR-4868: Setting the log level for the log4j root category results in
+  adding a new category, the empty string. (Shawn Heisey)
+
 Other Changes
 ----------------------
 
